Removed Elements tab (for developer use only).

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<li><a href="#about">About Me</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#elements">Elements</a></li>
+					<!-- <li><a href="#elements">Elements</a></li> -->
 				</ul>
 			</nav>
 		</header>
