Edited meta property og:image.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="#">
     <meta property="og:title" content="Tarot by Tonyana">
     <meta property="og:description" content="How can I help you today?">
-    <meta property="og:image:url" content="#">
+    <meta property="og:image:url" content="https://scontent.fluk1-1.fna.fbcdn.net/v/t1.6435-9/39807978_2129996050405823_4855657349299306496_n.png?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5v1nmNceB64AX-XPjgF&_nc_ht=scontent.fluk1-1.fna&oh=bdb8e6f5916c2e397b8869d35235bc62&oe=6170289B">
 	<title>Tarot by Tonyana</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
