--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Art and Illustrations by Amanda Wood">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="#">
-    <meta property="og:title" content="Tarot by Tonyana">
-    <meta property="og:description" content="How can I help you today?">
-    <meta property="og:image:url" content="https://scontent.fluk1-1.fna.fbcdn.net/v/t1.6435-9/39807978_2129996050405823_4855657349299306496_n.png?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5v1nmNceB64AX-XPjgF&_nc_ht=scontent.fluk1-1.fna&oh=bdb8e6f5916c2e397b8869d35235bc62&oe=6170289B">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Art and Illustrations by Amanda Wood">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="#">
+	<meta property="og:title" content="Tarot by Tonyana">
+	<meta property="og:description" content="How can I help you today?">
+	<meta property="og:image:url"
+		content="https://scontent.fluk1-1.fna.fbcdn.net/v/t1.6435-9/39807978_2129996050405823_4855657349299306496_n.png?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5v1nmNceB64AX-XPjgF&_nc_ht=scontent.fluk1-1.fna&oh=bdb8e6f5916c2e397b8869d35235bc62&oe=6170289B">
 	<title>Tarot by Tonyana</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -57,7 +58,7 @@
 			<!-- Work -->
 			<article id="services">
 				<h2 class="major">Services</h2>
-				<span class="image main"><img src="UnsplashImages/TarotOnTable.jpg" alt="" /></span>
+				<span class="image main"><img src="images/TarotOnTable.jpg" alt="" /></span>
 				<h4>These are all the services I offer</h4>
 				<div class="table-wrapper">
 					<table>
@@ -88,11 +89,6 @@
 								<td>1 hour</td>
 								<td>Phone Reading</td>
 								<td>$60</td>
-							</tr>
-							<tr>
-								<td>1 hour</td>
-								<td>Hypnosis Session</td>
-								<td>$125</td>
 							</tr>
 							<tr>
 								<td>--</td>
@@ -128,7 +124,28 @@
 							</tr>
 						</tbody>
 					</table>
-					<p id="disclaimer">*By law, I have to state that my services are for entertainment purposes only and I am in no way
+					<p> I certified in Hypnosis and also accredited through the International Board of Coaches and
+						Practitioners! If you would like to delve into the depths of your mind, consider hiring me for a
+						Hypnosis Session. </p>
+					<table>
+						<thead>
+							<th>
+								Hypnosis Session
+							</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1 hour</td>
+								<td>$125 per hour</td>
+							</tr>
+						</tbody>
+					</table>
+					<div id="hyplogo">
+						<img src="images/ibcpemblem.png" alt="">
+					</div>
+					<br>
+					<p id="disclaimer">*By law, I have to state that my services are for entertainment purposes only and
+						I am in no way
 						a doctor, lawyer, or financial advisor.</p>
 				</div>
 			</article>
@@ -136,7 +153,7 @@
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">About Me</h2>
-				<span class="image main"><img src="UnsplashImages/AboutImage.png" alt="" /></span>
+				<span class="image main"><img src="images/aboutImage.png" alt="" /></span>
 				<p>My journey started off as a wee lass noticing certain quirks and patterns to people's behaviors and
 					anticipating the mood of a room. Eventually, I had a mental rolodex of observations about people in
 					my life, family, neighbors, classmates, you name it, I was noticing habits and what was behind their
@@ -181,6 +198,7 @@
 			<!-- Contact -->
 			<article id="contact">
 				<h2 class="major">Contact</h2>
+				<span class="image main"><img src="images/contactImage.png" alt="" /></span>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field half">
@@ -202,7 +220,8 @@
 					</ul>
 				</form>
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/TarotByTonyana/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/TarotByTonyana/" class="icon brands fa-facebook-f"><span
+								class="label">Facebook</span></a></li>
 				</ul>
 			</article>
 
@@ -460,7 +479,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy;2021 Floating Hat Web Services. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">&copy;2021 Floating Hat Web Services. Design: <a href="https://html5up.net">HTML5
+					UP</a>.</p>
 		</footer>
 
 	</div>
