fixed typo and missing image in Services section.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<!-- Work -->
 			<article id="services">
 				<h2 class="major">Services</h2>
-				<span class="image main"><img src="images/TarotOnTable.jpg" alt="" /></span>
+				<span class="image main"><img src="images/tarotOnTable.jpg" alt="" /></span>
 				<h4>These are all the services I offer</h4>
 				<div class="table-wrapper">
 					<table>
@@ -124,7 +124,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<p> I certified in Hypnosis and also accredited through the International Board of Coaches and
+					<p> I am certified in Hypnosis and also am accredited through the International Board of Coaches and
 						Practitioners! If you would like to delve into the depths of your mind, consider hiring me for a
 						Hypnosis Session. </p>
 					<table>
