Fixed some syntax.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							</tr>
 							<tr>
 								<td>1 hour</td>
-								<td>In Person Reading</td>
+								<td>In-Person Reading</td>
 								<td>$70</td>
 							</tr>
 							<tr>
@@ -119,7 +119,7 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>7 minute mini readings for each person</td>
+								<td>7 minute mini-readings for each person</td>
 								<td>$120 per hour</td>
 							</tr>
 						</tbody>
