Changed email to clients.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<article id="contact">
 				<h2 class="major">Contact</h2>
 				<span class="image main"><img src="images/contactImage.png" alt="" /></span>
-				<form method="post" action="https://formsubmit.co/jamflynt@gmail.com">
+				<form method="post" action="https://formsubmit.co/libratarot@hotmail.com">
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
