--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <html>
 
 <head>
+	    <!-- 
+░░░▒█ █▀▀█ █▀▄▀█ ░▀░ █▀▀ 　 ▒█▀▀▀ █░░ █░░█ █▀▀▄ ▀▀█▀▀ 
+░▄░▒█ █▄▄█ █░▀░█ ▀█▀ █▀▀ 　 ▒█▀▀▀ █░░ █▄▄█ █░░█ ░░█░░ 
+▒█▄▄█ ▀░░▀ ▀░░░▀ ▀▀▀ ▀▀▀ 　 ▒█░░░ ▀▀▀ ▄▄▄█ ▀░░▀ ░░▀░░
+
+Hey! You found my name! Thanks for digging deeper into what I do. You can check out more of my stuff here: https://github.com/Jamflynt
+ -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Art and Illustrations by Amanda Wood">
