--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
  -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Art and Illustrations by Amanda Wood">
+	<meta name="description" content="Tarot by Tonyana">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="#">
 	<meta property="og:title" content="Tarot by Tonyana">
 	<meta property="og:description" content="How can I help you today?">
 	<meta property="og:image:url"
-		content="https://scontent.fluk1-1.fna.fbcdn.net/v/t1.6435-9/39807978_2129996050405823_4855657349299306496_n.png?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5v1nmNceB64AX-XPjgF&_nc_ht=scontent.fluk1-1.fna&oh=bdb8e6f5916c2e397b8869d35235bc62&oe=6170289B">
+		content="https://tarotbytonyana.com/images/profilePic.png">
 	<title>Tarot by Tonyana</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
