Changed about me picture on customer's request.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">About Me</h2>
-				<span class="image main"><img src="images/aboutImage.png" alt="" /></span>
+				<span class="image main"><img src="images/aboutMePic2.jpg" alt="" /></span>
 				<p>My journey started off as a wee lass noticing certain quirks and patterns to people's behaviors and
 					anticipating the mood of a room. Eventually, I had a mental rolodex of observations about people in
 					my life, family, neighbors, classmates, you name it, I was noticing habits and what was behind their
