Updated about me text with some grammar corrections.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	    <!-- 
+	<!-- 
 ░░░▒█ █▀▀█ █▀▄▀█ ░▀░ █▀▀ 　 ▒█▀▀▀ █░░ █░░█ █▀▀▄ ▀▀█▀▀ 
 ░▄░▒█ █▄▄█ █░▀░█ ▀█▀ █▀▀ 　 ▒█▀▀▀ █░░ █▄▄█ █░░█ ░░█░░ 
 ▒█▄▄█ ▀░░▀ ▀░░░▀ ▀▀▀ ▀▀▀ 　 ▒█░░░ ▀▀▀ ▄▄▄█ ▀░░▀ ░░▀░░
@@ -20,8 +20,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 	<meta property="og:url" content="#">
 	<meta property="og:title" content="Tarot by Tonyana">
 	<meta property="og:description" content="How can I help you today?">
-	<meta property="og:image:url"
-		content="https://www.tarotbytonyana.com/images/profilePic.png">
+	<meta property="og:image:url" content="https://www.tarotbytonyana.com/images/profilePic.png">
 	<title>Tarot by Tonyana</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -162,39 +161,40 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 				<span class="image main"><img src="images/aboutMePic2.jpg" alt="" /></span>
 				<p>My journey started off as a wee lass noticing certain quirks and patterns to people's behaviors and
 					anticipating the mood of a room. Eventually, I had a mental rolodex of observations about people in
-					my life, family, neighbors, classmates, you name it, I was noticing habits and what was behind their
-					eyes most of all. My big sis would have to lug me around when I was 5 and I would just skip around
-					in my jelly shoes while she read aloud to all her cool friends from a scroll she picked up from the
-					corner store what she was to expect the coming month...that was my introduction to ASTROLOGY! I was
-					hooked.
+					my life, family, neighbors, classmates, you name it. I was noticing habits and what was behind their
+					eyes most of all. My big sis would have to lug me around when I was five and I would just skip
+					around in my jelly shoes while she read aloud to all her cool friends from a scroll she picked up
+					from the corner store saying what she was to expect the coming month... that was my introduction to
+					ASTROLOGY! I was hooked.
 					<br>
 					<br>
-					Fast forward to the grungey 90's I spent my teen years casting and writing out by hand basic
+					Fast forward to the grungey 90's. I spent my teen years casting and writing out by hand basic
 					astrology charts. People were so fascinating to me, so different, but yet we all wanted to be
 					understood and seen. This was my preferred method of connecting to others. Them entrusting me with
 					their exact time and place of birth of the day they were put into this world, me spilling out their
-					secrets and private thoughts while the callus on my finger throbbed from my non-stop writing.
-					Alas...I was a young adult and knew that I should probably experience coming of age things and not
+					secrets and private thoughts while the callus on my finger throbbed from my non-stop writing. Alas,
+					I was a young adult and knew that I should probably experience coming of age things and not
 					laboriously concern myself with chart after chart. And that, my friends, is when I delved into
-					TAROT. To me it offered a chance for me to get down to the nitty gritty of people's life quicker and
-					by combining my Astrology knowledge I made the intuition kick in ...big time.
+					TAROT. To me it offered a chance to get down to the nitty gritty of a person's life quicker and by
+					combining my Astrology knowledge I made the intuition kick in -- big time.
+
 					<br>
 					<br>
-					I was in full gear and acquired a Parapsycology diploma (Stratford Career Institute) which included
-					studies of other things such as palm and face reading, numerology, angel therapy and fengshui. I
-					know a bit about most metaphysical things....and what I don't know I will get around to.
+					I was in full gear and acquired a Parapsychology diploma (Stratford Career Institute) which included
+					studies of other things such as palm and face reading, numerology, angel therapy, and feng shui. I
+					know a bit about most metaphysical things... and what I don't know, I will get around to.
 					<br>
 					<br>
-					In 2008 after a cancer diagnosis that made it clear to me that I wasn't living out my purpose. I
+					In 2008 after a cancer diagnosis that made it clear to me that I wasn't living out my purpose, I
 					decided to start reading part-time at some shops and did some psychic fairs. I have been reading
 					professionally for 14 years.
 					<br>
 					<br>
 					In a reading, self-defeating patterns become blaringly evident to me so I went and got certified in
-					HYPNOSIS so I can also help my clients break those chains that bind. Identifying them is important
-					for sure, but liberating oneself...well, that is next level stuff.
-					At this point with my 3 big loves...TAROT, DREAM INTERPRETATION, and HYPNOSIS I fancy myself a
-					Subconscious Specialist of sorts.
+					HYPNOSIS so that I can also help my clients break those chains that bind. Identifying them is
+					important for sure, but liberating oneself... well, that is next level stuff. At this point with my
+					3 big loves...TAROT, DREAM INTERPRETATION, and HYPNOSIS, I fancy myself a Subconscious Specialist of
+					sorts.
 					<br>
 					<br>
 					How can I be of service to you today?
