Added new section.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 				<ul>
 					<li><a href="#about">About Me</a></li>
 					<li><a href="#services">Services</a></li>
+					<li><a href="#kind-words">Kind Words</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -198,6 +199,18 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 					<br>
 					<br>
 					How can I be of service to you today?
+				</p>
+			</article>
+			<article id="kind-words">
+				<h2 class="major">Kind Words</h2>
+				<span class="image main"><img src="" alt="" /></span>
+				<p>My journey started off as a wee lass noticing certain quirks and patterns to people's behaviors and
+					anticipating the mood of a room. Eventually, I had a mental rolodex of observations about people in
+					my life, family, neighbors, classmates, you name it. I was noticing habits and what was behind their
+					eyes most of all. My big sis would have to lug me around when I was five and I would just skip
+					around in my jelly shoes while she read aloud to all her cool friends from a scroll she picked up
+					from the corner store saying what she was to expect the coming month... that was my introduction to
+					ASTROLOGY! I was hooked.
 				</p>
 			</article>
 
