--- a/index.html
+++ b/index.html
@@ -204,14 +204,39 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 			<article id="kind-words">
 				<h2 class="major">Kind Words</h2>
 				<span class="image main"><img src="" alt="" /></span>
-				<p>My journey started off as a wee lass noticing certain quirks and patterns to people's behaviors and
-					anticipating the mood of a room. Eventually, I had a mental rolodex of observations about people in
-					my life, family, neighbors, classmates, you name it. I was noticing habits and what was behind their
-					eyes most of all. My big sis would have to lug me around when I was five and I would just skip
-					around in my jelly shoes while she read aloud to all her cool friends from a scroll she picked up
-					from the corner store saying what she was to expect the coming month... that was my introduction to
-					ASTROLOGY! I was hooked.
+				<p>
+					I have known Tonyana for a few years after I met her at an event. I've since hosted her in my home
+					on a few occasions for parties. My friends who have come to have their readings definitely enjoy
+					her, as well as the social time we get while each person has their turn for her reading. The last
+					time she came, my husband had a reading done as well. The most amazing part of this reading is that
+					Tonyana lets you record your session. One afternoon about 3 months after our readings, we sat
+					together and listen to both of our recordings. We both couldn't believe in hindsight how accurate
+					she had been and her insight on our situation at the time and saw her guidance turned out to be spot
+					on. This girl definitely has a sixth sense about people. Not only that she is incredible genuine and
+					kind. She brings a positivity with her that I greatly appreciate and admire. I highly recommend
+					Tonyana for her Tarot readings. <br>
 				</p>
+				<p>
+					<em>Kristen from Cincinnati, OH</em><br>
+					<em>Nurse</em>
+				</p>
+				<hr>
+				<p>Tonyana's reading are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
+					I highly recommend her readings to gain clarity for yourself. She is a blessing.<br>
+				</p>
+				<p>
+					<em>Kellie from Fairfield, OH</em><br>
+					<em>Learning and Development Consultant</em>
+				</p>
+				<hr>
+				<p>
+					I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER! 
+				</p>
+				<p>
+					<em>Lequita from Cincinnati, OH</em><br>
+					<em>Nurse</em><br>
+				</p>
+
 			</article>
 
 			<!-- Contact -->
