Added header image. Added p tag about clients.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 			</article>
 			<article id="kind-words">
 				<h2 class="major">Kind Words</h2>
-				<span class="image main"><img src="" alt="" /></span>
+				<p>I am lucky enough to have the best clients! Here is just a small sampling of what they have to say about my services.</p>
+				<span class="image main"><img src="images/kindWords.jpg" alt="" /></span>
 				<p>
 					I have known Tonyana for a few years after I met her at an event. I've since hosted her in my home
 					on a few occasions for parties. My friends who have come to have their readings definitely enjoy
