Added quotation marks around testimonials in Kind Words section

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 				<p>I am lucky enough to have the best clients! Here is just a small sampling of what they have to say about my services.</p>
 				<span class="image main"><img src="images/kindWords.jpg" alt="" /></span>
 				<p>
-					I have known Tonyana for a few years after I met her at an event. I've since hosted her in my home
+					"I have known Tonyana for a few years after I met her at an event. I've since hosted her in my home
 					on a few occasions for parties. My friends who have come to have their readings definitely enjoy
 					her, as well as the social time we get while each person has their turn for her reading. The last
 					time she came, my husband had a reading done as well. The most amazing part of this reading is that
@@ -215,15 +215,15 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 					she had been and her insight on our situation at the time and saw her guidance turned out to be spot
 					on. This girl definitely has a sixth sense about people. Not only that she is incredible genuine and
 					kind. She brings a positivity with her that I greatly appreciate and admire. I highly recommend
-					Tonyana for her Tarot readings. <br>
+					Tonyana for her Tarot readings." <br>
 				</p>
 				<p>
 					<em>Kristen from Cincinnati, OH</em><br>
 					<em>Nurse</em>
 				</p>
 				<hr>
-				<p>Tonyana's reading are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
-					I highly recommend her readings to gain clarity for yourself. She is a blessing.<br>
+				<p>"Tonyana's reading are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
+					I highly recommend her readings to gain clarity for yourself. She is a blessing."<br>
 				</p>
 				<p>
 					<em>Kellie from Fairfield, OH</em><br>
@@ -231,7 +231,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 				</p>
 				<hr>
 				<p>
-					I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER! 
+					"I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER!" 
 				</p>
 				<p>
 					<em>Lequita from Cincinnati, OH</em><br>
