Proof reading corrections

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 					Tonyana lets you record your session. One afternoon about 3 months after our readings, we sat
 					together and listen to both of our recordings. We both couldn't believe in hindsight how accurate
 					she had been and her insight on our situation at the time and saw her guidance turned out to be spot
-					on. This girl definitely has a sixth sense about people. Not only that she is incredible genuine and
-					kind. She brings a positivity with her that I greatly appreciate and admire. I highly recommend
+					on. This girl definitely has a sixth sense about people. Not only that, she is incredibly genuine and kind and brings a positivity with her that I greatly appreciate and admire. I highly recommend
 					Tonyana for her Tarot readings." <br>
 				</p>
 				<p>
@@ -222,7 +221,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 					<em>Nurse</em>
 				</p>
 				<hr>
-				<p>"Tonyana's reading are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
+				<p>"Tonyana's readings are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
 					I highly recommend her readings to gain clarity for yourself. She is a blessing."<br>
 				</p>
 				<p>
@@ -231,7 +230,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 				</p>
 				<hr>
 				<p>
-					"I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER!" 
+					"I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that I would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER!" 
 				</p>
 				<p>
 					<em>Lequita from Cincinnati, OH</em><br>
