--- a/index.html
+++ b/index.html
@@ -79,27 +79,27 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 							<tr>
 								<td>30 minutes</td>
 								<td>In-Person Reading</td>
-								<td>$40</td>
+								<td>$45</td>
 							</tr>
 							<tr>
 								<td>30 minutes</td>
 								<td>Phone Reading</td>
-								<td>$35</td>
+								<td>$40</td>
 							</tr>
 							<tr>
 								<td>1 hour</td>
 								<td>In-Person Reading</td>
-								<td>$75</td>
+								<td>$80</td>
 							</tr>
 							<tr>
 								<td>1 hour</td>
 								<td>Phone Reading</td>
-								<td>$65</td>
+								<td>$70</td>
 							</tr>
 							<tr>
 								<td>--</td>
 								<td> <a href="https://www.voxer.com/">Voxer</a> Reading</td>
-								<td>$35</td>
+								<td>$40</td>
 							</tr>
 						</tbody>
 					</table>
@@ -112,7 +112,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 						<tbody>
 							<tr>
 								<td>20 minute readings for each individual</td>
-								<td>$30 per individual</td>
+								<td>$35 per individual</td>
 							</tr>
 						</tbody>
 					</table>
@@ -126,12 +126,12 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 						<tbody>
 							<tr>
 								<td>7 minute mini-readings for each person</td>
-								<td>$125 per hour</td>
+								<td>$130 per hour</td>
 							</tr>
 						</tbody>
 					</table>
 					<p> I am certified in Hypnosis and also am accredited through the International Board of Coaches and
-						Practitioners! If you would like to delve into the depths of your mind, consider hiring me for a
+						Practitioners! If you would like to delve into the depths of your mind as a 16 year Professional Intuitive, consider hiring me for a
 						Hypnosis Session. </p>
 					<table>
 						<thead>
@@ -142,7 +142,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 						<tbody>
 							<tr>
 								<td>1 hour</td>
-								<td>$125 per hour</td>
+								<td>$130 per hour</td>
 							</tr>
 						</tbody>
 					</table>
@@ -150,9 +150,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 						<img src="images/ibcpemblem.png" alt="">
 					</div>
 					<br>
-					<p id="disclaimer">*By law, I have to state that my services are for entertainment purposes only and
-						I am in no way
-						a doctor, lawyer, or financial advisor.</p>
+					<p id="disclaimer">*By law, I have to state that my services are for entertainment purposes only and I am in no way a doctor, lawyer, or financial advisor. If you have a pre-existing mental health condition or are experiencing symptoms of mental illness I urge you not to work with me (or any reader) without the supervision of your mental health professional.  Your decisions are yours alone.</p>
 				</div>
 			</article>
 
@@ -188,7 +186,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 					<br>
 					In 2008 after a cancer diagnosis that made it clear to me that I wasn't living out my purpose, I
 					decided to start reading part-time at some shops and did some psychic fairs. I have been reading
-					professionally for 14 years.
+					professionally for 16 years.
 					<br>
 					<br>
 					In a reading, self-defeating patterns become blaringly evident to me so I went and got certified in
