Form update. Random like string

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Hey! You found my name! Thanks for digging deeper into what I do. You can check 
 			<article id="contact">
 				<h2 class="major">Contact</h2>
 				<span class="image main"><img src="images/contactImage.png" alt="" /></span>
-				<form method="post" action="https://formsubmit.co/libratarot@hotmail.com">
+				<form method="post" action="7157a1748a1fcd48ba2053b1519f0317">
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
