About. Footer contact

--- a/Rebranding 2025/about.html
+++ b/Rebranding 2025/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Subconscious Specialist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Subconscious Specialist - Tonyana Cruz</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,11 +31,12 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="kind-words.html">Kind Words</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
@@ -44,8 +45,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>The Subconscious Specialist</h2>
+								<p>Nice to meet you, my name is Tonyana Cruz, the Subconscious Specialist.</p>
 							</div>
 						</header>
 
@@ -53,26 +54,26 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+									<h3 class="major">My Specialities</h3>
+									<p>My specialty is Tarot; it has been my primary tool as a professional Intuitive for the past 17 years. I began by creating basic Astrology charts, and that information continues to enhance my readings. Additionally, I offer Hypnosis to help break self-defeating patterns that manifest in our lives. My thirst for metaphysical knowledge is insatiable; however, it is consistently balanced by a practicality that my clients find refreshingly logical. My intention for this page is to enlighten, delight, and inform—an interaction that is, indeed, reciprocal. Each encounter enriches my own understanding as well.</p>
 
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+									<p>I hold a Parapsychology diploma from Stratford Career Institute and am certified as a Clinical Hypnotherapist through Transform Destiny, approved by IBCP. One could accurately describe me as a subconscious specialist! Nevertheless, intuition is something one either chooses to embrace or not. We all possess intuitive capabilities, though not everyone feels comfortable exploring them. Through our sessions, my aim is to empower you to confidently trust your own psychic impressions, enabling informed personal decisions. Allow me to serve as your Cosmic Catalyst. I would greatly appreciate your business, but more importantly, I wish to see you soar.</p>
 
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h3 class="major">Empower Your Journey with an Intuitive Expert</h3>
+									<p>With over 17 years of experience in Tarot, Astrology, and Hypnotherapy, Tonyana uniquely blends metaphysical insight with practical wisdom. Explore firsthand experiences from satisfied clients or discover transformative services designed specifically to awaken your own intuitive potential.</p>
 
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Insights from Those Who’ve Soared</h3>
+											<p>Discover firsthand how clients have benefited from Tonyana’s intuitive guidance and practical wisdom. Explore their experiences and see why many continue to trust Tonyana as their Cosmic Catalyst.</p>
+											<a href="kind-words.html" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Explore Intuitive Services Tailored for You</h3>
+											<p>Explore a range of intuitive services offered by Tonyana, including expert Tarot readings, insightful Astrology charts, and transformative Hypnotherapy sessions. Each service is carefully crafted to empower your own intuitive abilities and foster personal growth.</p>
+											<a href="services.html" class="special">Learn more</a>
 										</article>
 									</section>
 
@@ -84,9 +85,9 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
+							<h2 class="major">Connect and Begin Your Journey</h2>
+							<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+							<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -106,16 +107,9 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope"><a href="#">libratarot@hotmail.com</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/TarotByTonyana/">facebook.com/TarotByTonyana</a></li>
+								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
