--- a/Rebranding 2025/index.html
+++ b/Rebranding 2025/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- 
+		░░░▒█ █▀▀█ █▀▄▀█ ░▀░ █▀▀ 　 ▒█▀▀▀ █░░ █░░█ █▀▀▄ ▀▀█▀▀ 
+		░▄░▒█ █▄▄█ █░▀░█ ▀█▀ █▀▀ 　 ▒█▀▀▀ █░░ █▄▄█ █░░█ ░░█░░ 
+		▒█▄▄█ ▀░░▀ ▀░░░▀ ▀▀▀ ▀▀▀ 　 ▒█░░░ ▀▀▀ ▄▄▄█ ▀░░▀ ░░▀░░
+		Hey! You found my name! Thanks for digging deeper into what I do. You can check out more of my stuff here: https://github.com/Jamflynt
+		-->
 		<title>Subconscious Specalist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -87,46 +93,39 @@
 							</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
+				<section id="footer">
+					<div class="inner">
+						<h2 class="major">Connect and Begin Your Journey</h2>
+						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+						<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
+							<div class="fields">
+								<div class="field">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
 								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<div class="field">
+									<label for="email">Email</label>
+									<input type="email" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="4"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" /></li>
 							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+						</form>
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="#">libratarot@hotmail.com</a></li>
+							<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/TarotByTonyana/">facebook.com/TarotByTonyana</a></li>
+							<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</section>
 
 			</div>
 
